# mfg-for-financial-market

./: .gitignore  README.md  pyproject.toml
Temp/: build_report.py  calc_params.py  ingest_cotahist_equities.py  ingest_ibov.py  report_template.html  returns_vol.py  run_solver_check.py  run_solver_check_mix.py  run_solver_small.py
configs/: baseline.yaml
data/processed/: calibration_summary.json  cotahist_asset_summary.csv  cotahist_equities_summary.json  cotahist_market_summary.json  cotahist_summary.json  supply_curve.csv
docs/: DATA.md
examples/: run_baseline.py  run_sweep_phi_gamma.py
examples_output/demo_small/: M_all.npy  U_all.npy  alpha_all.npy  metrics.json
mfg-finance/: pyproject.toml  pytest.ini
mfg-finance/configs/: baseline.yaml
mfg-finance/tests/: test_hjb.py  test_ops.py  test_picard.py
notebooks/: mfg_pipeline.ipynb
scripts/: analytics_returns.py  augment_nb.py  augment_nb2.py  build_report.py  build_supply_curve.py  calib_empirical.py  cleanup_nb.py  dump_cells.py  enhance_tables.py  fix_encoding.py  fix_import.py  fix_markdown.py  fix_nb.py  fix_quotes.py  fix_text_nb.py  fix_titles.py  fix_unicode.py  ingest_cotahist.py  ingest_cotahist_equities.py  inspect_nb.py  inspect_viz.py  list_md.py  norm_md.py  peek_cells.py  preview_nb.py  rebuild_nb.py  returns_vol.py  rewrite_nb_full.py  rewrite_readme.py  run_notebook_pipeline.py  run_solver_baseline.py  sanitize_nb.py  show_md.py  update_solver_config.py  update_tables.py  update_tables2.py  update_visuals.py
tests/: test_fp_mass.py  test_hamiltonian.py  test_refinement.py
(+54 files in other folders)
